--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="https://jtu.my.id/404.html" />
+<link rel="canonical" href="https://git.jtu.my.id/404.html" />
 
 
     <title>
@@ -25,16 +25,16 @@
 
 
 
-<link rel="stylesheet" href="https://jtu.my.id/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css">
+<link rel="stylesheet" href="https://git.jtu.my.id/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css">
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="https://jtu.my.id/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://jtu.my.id/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://jtu.my.id/favicon-16x16.png">
-    <link rel="manifest" href="https://jtu.my.id/site.webmanifest">
-    <link rel="mask-icon" href="https://jtu.my.id/safari-pinned-tab.svg" color="">
-    <link rel="shortcut icon" href="https://jtu.my.id/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://git.jtu.my.id/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://git.jtu.my.id/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://git.jtu.my.id/favicon-16x16.png">
+    <link rel="manifest" href="https://git.jtu.my.id/site.webmanifest">
+    <link rel="mask-icon" href="https://git.jtu.my.id/safari-pinned-tab.svg" color="">
+    <link rel="shortcut icon" href="https://gitjtu.my.id/favicon.ico">
     <meta name="msapplication-TileColor" content="">
     <meta name="theme-color" content="">
 
