--- a/404.html
+++ b/404.html
@@ -25,7 +25,6 @@
 
 
 
-<link rel="stylesheet" href="https://git.jtu.my.id/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css">
 
 
 
@@ -81,7 +80,7 @@
         <div class="container">
             <header class="header">
     <span class="header__inner">
-        <a href="https://jtu.my.id/" style="text-decoration: none;">
+        <a href="https://git.jtu.my.id/" style="text-decoration: none;">
     <div class="logo">
         
             <span class="logo__mark">&gt;</span>
@@ -99,7 +98,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://jtu.my.id/about/">About</a></li><li><a href="https://jtu.my.id/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="https://git.jtu.my.id/about/">About</a></li><li><a href="https://git.jtu.my.id/posts/">Posts</a></li>
     </ul>
 </nav>
 
